<resources>
    <string name="app_name">Androidex</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_now">do you have any account? sign up now</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="sing_up">Sing Up</string>
    <string name="enter_your_registered_mobile_number_or_email_address">Enter Your Registered Mobile Number or Email Address</string>
    <string name="next">Next</string>
</resources>
