<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/appImg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/app_ligin" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:hint="@string/enter_your_email"
        android:textColor="@color/colorPrimary"
        android:maxLines="1"
        android:inputType="text"
        android:background="@drawable/etds"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:hint="@string/enter_your_password"
        android:textColor="@color/colorPrimary"
        android:maxLines="1"
        android:maxLength="6"
        android:inputType="numberPassword"
        android:background="@drawable/etds"
        android:drawableLeft="@drawable/ic_pass"
        android:drawablePadding="5dp"/>
    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/btds"
        android:text="@string/login"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:textAlignment="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtRegisterYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:textAllCaps="false"
            android:padding="20dp"
            android:textAlignment="center"
            android:text="@string/sign_up_now"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>
</LinearLayout>