<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ForgotPasswordActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/forgot_password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_number_or_email_address"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:padding="2dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:hint="@string/enter_your_email"
        android:textColor="@color/colorPrimary"
        android:maxLines="1"
        android:inputType="text"
        android:background="@drawable/etds"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"/>
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:hint="@string/mobile_number"
        android:textColor="@color/colorPrimary"
        android:maxLines="1"
        android:maxLength="6"
        android:inputType="number"
        android:background="@drawable/etds"
        android:layout_below="@+id/editFastName"
        android:drawableLeft="@drawable/ic_mobile"
        android:drawablePadding="5dp"/>
    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/btds"
        android:text="@string/next"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="20sp"/>

</LinearLayout>