<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffff"
    android:fillViewport="true"
    tools:context=".SignupActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground">
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>

            <ImageView
                android:id="@+id/imgSinup"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/signup"
                android:layout_below="@+id/toolbar"/>

            <EditText
                android:id="@+id/etEmailSinup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgSinup"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/etds"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/colorPrimary" />


            <EditText
                android:id="@+id/etPasswordSinpu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="15dp"
                android:hint="@string/enter_your_password"
                android:textColor="@color/colorPrimary"
                android:maxLines="1"
                android:maxLength="6"
                android:inputType="numberPassword"
                android:background="@drawable/etds"
                android:layout_below="@+id/etEmailSinup"
                android:drawableLeft="@drawable/ic_pass"
                android:drawablePadding="5dp"/>
            <Button
                android:id="@+id/btSingup"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="120dp"
                android:background="@drawable/btds"
                android:text="@string/sing_up"
                android:textColor="#ffff"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_below="@id/etPasswordSinpu"/>


        </RelativeLayout>
    </RelativeLayout>
</ScrollView>